# oddbot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: build-image.yml  build.yml  deploy-production.yml  deploy-staging.yml
k8s/base/: configmap.yaml  deployment.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
src/: config.rs  error.rs  lib.rs  main.rs  prelude.rs
src/db/: mod.rs
src/discord/: bot.rs  character.rs  events.rs  handler.rs  mod.rs
src/discord/commands/: mod.rs  modal.rs  register.rs
src/discord/commands/oblivion/: character.rs  commands.rs  mod.rs
src/event_stream/: message.rs  mod.rs  stream.rs
src/nats/: mod.rs
src/skeever/: mod.rs  squeak.rs
