[package]
name = "oddbot"
version = "0.1.0"
edition = "2024"
default-run = "oddbot"

[[bin]]
name = "oblivion-server"
path = "src/bin/oblivion-server.rs"

[[bin]]
name = "oddbot"
path = "src/bin/oddbot.rs"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
] }
thiserror = "2.0.12"
async-nats = "0.39.0"
serde = "1.0.219"
serde_json = "1.0.140"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
chrono = "0.4.40"
ulid = { version = "1.2.1", features = ["serde"] }
